package gui;

public interface Parsable {

    static void  valueWriter(char i){}
}